--- a/src/Styles/pages.module.scss
+++ b/src/Styles/pages.module.scss
@@ -16,13 +16,12 @@
 .buttonGroup {
   display: flex;
   justify-content: space-around;
-  padding: 2rem;
+  padding: 1rem;
 
   a {  
     display: inline-block;
     padding: 10px 20px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 10px 0;
     color: #fff;
     background: var(--background);
     box-shadow: 10px 10px 20px var(--shadow), -10px -10px 20px var(--highlight);
@@ -50,8 +49,7 @@
 img {
   max-width: 80%;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
 
 p.caption {
