--- a/src/Styles/pages.module.scss
+++ b/src/Styles/pages.module.scss
@@ -37,6 +37,15 @@
       transform: translateY(1px);
     }
   }
+  
+  @media only screen and (max-width: 768px) {
+    flex-direction: column;
+    align-items: center;
+    
+    a {
+      margin: 10px;
+    }
+  }
 }
 
 .inlineCode {
